--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             </p>
         </div>
 
-        <button class="accordion">Button 13</button>
+        <button class="accordion">Bandit 13</button>
         <div class="panel">
             <p>
                 So in this level we know what file the password is kept in. But it can only be read by user <i>Bandit 14</i>. Well how can we read it as user 13? We get a private SSH Key that we can use to log in to the bandit14 user. 
