--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                 We will need to look a little closer at <b>ssh</b> and its options then.
             </p>
             <p>
-                The configuration in the .bashrc is telling ssh to close the <i>pseudo-terminal</i> that <b>ssh</b> requests and creates the. What is that? A terminal that has the functions of a physical terminal without actually being one. Basically it is part of what makes this whole ssh things work. We "fake" the terminal on our end and it sends its data to the terminal on the actual devices side.
+                The configuration in the .bashrc is telling ssh to close the <i>pseudo-terminal</i> that <b>ssh</b> requests and creates. What is that? A terminal that has the functions of a physical terminal without actually being one. Basically it is part of what makes this whole ssh things work. We "fake" the terminal on our end and it sends its data to the terminal on the actual devices side.
             </p>
             <p>
                 We need to force this to open. With ssh we can force this to happen by using <b>-t</b>. From the ssh man page : <i>Force pseudo-terminal allocation.  This can be used to execute
